syntax = "proto3";

package user.email;
option go_package = "github.com/ysomad/answersuck/api/user/email";

import "google/protobuf/empty.proto";
import "validate/validate.proto";

service EmailService {
  // VerifyEmail verifies account email by provided code.
  rpc VerifyEmail (VerifyEmailRequest) returns (VerifyEmailResponse);

  // UpdateEmail updates account email.
  rpc UpdateEmail (UpdateEmailRequest) returns (UpdateEmailResponse);

  // SendEmailVerification sends email verification with new code.
  rpc SendEmailVerification (SendEmailVerificationRequest) returns (google.protobuf.Empty);
}

message VerifyEmailRequest {
  string verification_code = 1;
}

message VerifyEmailResponse {
  bool account_email_verified = 1;
}

message UpdateEmailRequest {
  string account_id = 1 [(validate.rules).string.uuid = true];
  string new_email = 2 [(validate.rules).string.email = true];
}

message UpdateEmailResponse {
  string new_email = 1;
}

message SendEmailVerificationRequest {
  string account_id = 1 [(validate.rules).string.uuid = true];
}